[project]
name = "treasury_agent"
version = "0.1.0"
description = "treasury-agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.152.0,<1.0.0"
]

[project.scripts]
treasury_agent = "treasury_agent.main:run"
run_crew = "treasury_agent.main:run"
train = "treasury_agent.main:train"
replay = "treasury_agent.main:replay"
test = "treasury_agent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
